--- a/index-contact.html
+++ b/index-contact.html
@@ -33,7 +33,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">© Sachu-Settan <a href="http://github.com/Saran-Kuttan"></a>.</span>
+						<span class="copyright">© Saran-Kuttan <a href="http://github.com/Saran-Kuttan"></a>.</span>
 					</footer>
 
 			</div>
