--- a/index-en.html
+++ b/index-en.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html><head> 
 <audio src="https://d.top4top.io/m_2212qmkts0.mp3" autoplay controls> </audio>
-		<title>Sachu Mon</title>
+		<title>Saran Mon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 							<div class="inner">
 								<h1>ABOUT ME</h1>
 								<p>Welcome To My Site 🙂</a> BE HAPPY😌<br />
-								Click On Any Buttons</a> 🙃Sachu Mon 💞</p>
+								Click On Any Buttons</a> 🙃Saran 💞</p>
 							</div>
 						</div>
 						<nav>
@@ -41,7 +41,7 @@
 							<article id="about">
 								<h2 class="major">ABOUT</h2>
 								<span class="image main"><img src="https://i.imgur.com/W3nioLv.jpeg" alt="" /></span>
-								<p>Hi my name is Sanooj. I am from Kottayam. Ethre Arinja mathi Thalkalam 😌</p>                                                              
+								<p>Hi my name is Saran. I am from Thrissur. Ethre Arinja mathi Thalkalam 😌</p>                                                              
 							</article>
 
                                                 <!-- Faq -->
