--- a/index-en.html
+++ b/index-en.html
@@ -302,7 +302,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Copyright © 2022: <a href="https://github.com/Sachu-Settan">Developer:Sanooj Mon</a>.</p>
+						<p class="copyright">&copy; Copyright © 2022: <a href="https://github.com/Sachu-Settan">Developer:Sanooj Settan</a>.</p>
 					</footer>
 
 			</div>
