--- a/index-me.html
+++ b/index-me.html
@@ -24,7 +24,7 @@
 						<header>
 							 <a href="ktb.png"><span class="avatar"><img width='200' height='200'  src="https://i.imgur.com/j5CxWcU.jpg" alt=""> </a></span>
 							<h1>Hi i'am Sanooj [Sachu]</h1>
-							<h3 >• 9th standard student @ Holy Family International School Elengoi [Kottayam]</h3><h3>• I LIKE TO DEVELOP APPS AND WHATAPP BOT, BUT I'M NOT A PRO IN THAT</h3><h3>• 💬 Ask me about <strong>BOTS</strong></h3><h3>• 📫 How to reach me <a href="https://wa.me/919744933034?text=HI,%20I%20GOT%20THIS%20FROM%20YOUR%20WEBSITE%20💕💕">CONTACT ME ON WHATSAPP</a></h3>
+							<h3 >• 9th standard student @ St. Aloysius Higher Secondary School [Kottayam]</h3><h3>• I LIKE TO DEVELOP WEBSITES, BUT I'M NOT A PRO IN THAT</h3><h3>• 💬 Ask me about <strong>Nothing</strong></h3><h3>• 📫 How to reach me <a href="https://wa.me/917592984330?text=HI,%20I%20GOT%20THIS%20FROM%20YOUR%20WEBSITE%20💕💕">CONTACT ME ON WHATSAPP</a></h3>
 						</header>
 						
 						<footer>
@@ -42,10 +42,10 @@
 						</footer>
 						<div align="center">
 
-  <img src="https://activity-graph.herokuapp.com/graph?username=Sachu-Settan&amp;bg_color=000000&amp;color=4fff67&amp;line=4fff67&amp;point=ffffff&amp;area=true&amp;hide_border=true" alt="GitHub Activity Graph">
+  <img src="https://activity-graph.herokuapp.com/graph?username=Saran-Kuttan&amp;bg_color=000000&amp;color=4fff67&amp;line=4fff67&amp;point=ffffff&amp;area=true&amp;hide_border=true" alt="GitHub Activity Graph">
   </div>
 		<p align="center">
-<p><img align="center" src="https://github-readme-stats.vercel.app/api?username=Sachu-Settan&show_icons=true&theme=dark&locale=en" alt="Sachu-Settan" /></p>
+<p><img align="center" src="https://github-readme-stats.vercel.app/api?username=Saran-Kuttan&show_icons=true&theme=dark&locale=en" alt="Sachu-Settan" /></p>
 			</section>
 
 				<!-- Footer -->
