--- a/index-contact.html
+++ b/index-contact.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
                 <audio src="https://l.top4top.io/m_2261zuaay0.mp3" autoplay controls> </audio> 
-		<title>Sachu Mon</title>
+		<title>Saran Mon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,22 +18,22 @@
 				<!-- Header -->
 					<header id="header">
 					<p align="center">
-                                                <a href="#"><span class="https://i.imgur.com/yf3VO3C.png"><img width='200' height='200' src="https://i.imgur.com/yf3VO3C.png" alt=""> </a></span>
+                                                <a href="#"><span class="https://i.imgur.com/j5CxWcU.jpg"><img width='200' height='200' src="https://i.imgur.com/j5CxWcU.jpg" alt=""> </a></span>
 						<h1>Sachu Mon</h1>
 						<p>ʙᴇ ᴋɪɴᴅ ᴡʜᴇɴᴇᴠᴇʀ ᴘᴏssɪʙʟᴇ. ɪᴛ ɪs ᴀʟᴡᴀʏs ᴘᴏssɪʙʟᴇ.🙂</p>
 						<nav>
 							<ul>
-								<li><a href="https://wa.me/919744933034" class="icon brands fa-whatsapp"><span class="label">Twitter</span></a></li>
-								<li><a href="https://instagram.com/sachu.modder?utm_medium=copy_link" class="icon brands fa-instagram"><span class="label">Dribbble</span></a></li>
-								<li><a href="https://github.com/Sachu-Settan" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="sanoojes6371@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://wa.me/917592984330" class="icon brands fa-whatsapp"><span class="label">Twitter</span></a></li>
+								<li><a href="https://instagram.com/_saran_ff_?utm_medium=copy_link" class="icon brands fa-instagram"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://github.com/Saran-Kuttan" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="saranzzz750@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">© Sachu-Settan <a href="http://github.com/Sachu-Settan"></a>.</span>
+						<span class="copyright">© Saran-Kuttan <a href="http://github.com/Saran-Kuttan"></a>.</span>
 					</footer>
 
 			</div>
