--- a/index-en.html
+++ b/index-en.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html><head> 
 <audio src="https://d.top4top.io/m_2212qmkts0.mp3" autoplay controls> </audio>
-		<title>Saran Mon</title>
+		<title>Saran-Kuttan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
