--- a/index-contact.html
+++ b/index-contact.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
                 <audio src="https://l.top4top.io/m_2261zuaay0.mp3" autoplay controls> </audio> 
-		<title>Saran Mon</title>
+		<title>Saran-Kuttan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
