--- a/index-me.html
+++ b/index-me.html
@@ -24,7 +24,7 @@
 						<header>
 							 <a href="ktb.png"><span class="avatar"><img width='200' height='200'  src="https://i.imgur.com/j5CxWcU.jpg" alt=""> </a></span>
 							<h1>Hi i'am Saran</h1>
-							<h3 >• 9th standard student @ St. Aloysius Higher Secondary School [Trissur]</h3><h3>• I LIKE TO DEVELOP WEBSITES, BUT I'M NOT A PRO IN THAT</h3><h3>• 💬 Ask me about <strong>Nothing</strong></h3><h3>• 📫 How to reach me <a href="https://wa.me/917592984330?text=HI,%20I%20GOT%20THIS%20FROM%20YOUR%20WEBSITE%20💕💕">CONTACT ME ON WHATSAPP</a></h3>
+							<h3 >• 9th standard student @ St. Aloysius Higher Secondary School [Thrissur]</h3><h3>• I LIKE TO DEVELOP WEBSITES, BUT I'M NOT A PRO IN THAT</h3><h3>• 💬 Ask me about <strong>Nothing</strong></h3><h3>• 📫 How to reach me <a href="https://wa.me/917592984330?text=HI,%20I%20GOT%20THIS%20FROM%20YOUR%20WEBSITE%20💕💕">CONTACT ME ON WHATSAPP</a></h3>
 						</header>
 						
 						<footer>
