--- a/index-en.html
+++ b/index-en.html
@@ -61,7 +61,7 @@
 			                                <h2 class="major">Our Team</h2>
                                                                 <span class="image main"><img src="https://i.imgur.com/yf3VO3C.jpg" alt="" /></span>
 								<p> Ｓａｃｈｕ <p>
-								<span class="image main"><img src="https://i.imgur.com/j5CxWcU.jpg" alt="" /></span>
+								<span class="image main"><img src="https://avatars.githubusercontent.com/u/101449554" alt="" /></span>
 								<p> Ｓａｒａｎ <p>
 							</article>
 						
